--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -474,12 +474,26 @@
     font-size: 0.75em;
     text-align: center;
   }
+
+  button {
+    border-radius: 2px;
+    text-align: justify;
+  }
 }
 
 .italic {
   font-style:oblique; 
 }
 
+.quote {
+  border-style:double; 
+  border-color:rgb(180,180,180);
+  background:rgb(230,230,230);
+  border-radius:10px;
+  width:90%;
+  margin:auto;
+  padding:3%;
+}
 
 
 /**
