--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -491,8 +491,9 @@
   background:rgb(230,230,230);
   border-radius:10px;
   width:90%;
-  margin:auto;
-  padding:3% 5% 3% 5%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding:1% 3% 3% 3%;
 }
 
 
