--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -457,7 +457,7 @@
   }
 
   img {
-    margin: 2em 0;
+    margin: 2em 1em 2em 1em;
   }
 
   figure {
@@ -494,6 +494,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding:1% 3% 3% 3%;
+  text-indent: 2em;
 }
 
 
@@ -501,69 +502,81 @@
   width: 95%;
   background-color: #f8f9f9;
   position:relative;
+  padding:1% 3% 3% 3%;
 }
 
 .half-up {
   height: 50%;
   position: absolute;
   top: 1%;
+  margin: 5%;
 }
 
 .half-down {
   height: 50%;
   position: absolute;
   bottom: 1%;
+  margin: 5%;
 }
 
 .half-left{
   width: 50%;
   float: left;
-
+  margin: 5%;
 }
 
 .half-right{
   width: 50%;
   float: right;
+  margin: 5%;
 }
 
 .three-left {
   width: 30%;
   float: left;
+  margin: 5%;
 }
 
 .three-right {
   width: 30%;
   float: right;
+  margin: 5%;
 }
 
 .seven-left {
   width: 70%;
   float: left;
+  margin: 5%;
 }
 
 .seven-right {
   width: 70%;
   float: right;
+  margin: 5%;
 }
 
 .four-left {
   width: 30%;
   float: left;
+  margin: 5%;
 }
 
 .four-right {
   width: 30%;
   float: right;
+  margin: 5%;
 }
 
 .six-left {
   width: 70%;
   float: left;
+  margin: 5%;
 }
 
 .six-right {
   width: 70%;
   float: right;
+  margin: 5%;
 }
 
 
@@ -577,7 +590,9 @@
   display:flex;        
 }
 .three-layout-left{
-  width:100px; height:100%;
+  width:100px;
+  height:100%;
+  margin: 5%;
 
   flex:none;
 }
@@ -585,11 +600,13 @@
   width: auto;
   height: 100%;
   flex:1;
+  margin: 5%;
 }
 .three-layout-right{
   height:100%;
   width: 100px;
-  flex:none;        
+  flex:none;
+  margin: 5%;      
 }
 
 
