--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -489,7 +489,7 @@
   border-style:double; 
   border-color:rgb(180,180,180);
   background:rgb(230,230,230);
-  border-radius:10px;
+  border-radius:20px;
   width:90%;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -503,6 +503,7 @@
   background-color: #f8f9f9;
   position:relative;
   padding:1% 3% 3% 3%;
+  margin-bottom: 10px;
 }
 
 .half-up {
@@ -520,13 +521,13 @@
 }
 
 .half-left{
-  width: 50%;
+  width: 40%;
   float: left;
   margin: 5%;
 }
 
 .half-right{
-  width: 50%;
+  width: 40%;
   float: right;
   margin: 5%;
 }
@@ -584,29 +585,27 @@
 
 
 .three-layout-container{
-  width:100%;
-  height:100%;
-  border:1px solid;
+  background-color: #f8f9f9;
+  padding:1% 3% 3% 3%;
   display:flex;        
 }
 .three-layout-left{
   width:100px;
   height:100%;
-  margin: 5%;
-
+  margin: 1%;
   flex:none;
 }
 .three-layout-middle{
   width: auto;
   height: 100%;
   flex:1;
-  margin: 5%;
+  margin: 1%;
 }
 .three-layout-right{
   height:100%;
   width: 100px;
   flex:none;
-  margin: 5%;      
+  margin: 1%;    
 }
 
 
