--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -567,10 +567,11 @@
   border-color:rgb(180,180,180);
   background:rgb(230,230,230);
   border-radius:20px;
-  width:100%;
+  width:80%;
+  margin: auto;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding:1% 3% 3% 3%;
+  padding:1% 3% 1% 3%;
   text-indent: 2em;
 }
 
