--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -587,11 +587,50 @@
 }
 
 .crop-fig{
-  background-repeat: no-repeat;
-  background-position: center;
+  width: 100%;
+  height: 100%;
+
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
 }
 
+/**
+ * crop-fig-div
+ */
+ .crop-fig-div {
+  width: 100%;
+  max-width: $mq-md;
+  margin: auto;
+  padding-bottom: 1em;
+  display: flex;
+  flex-direction: row;
+
+  @media (min-width: $mq-lg) {
+    width: 95%;
+  }
+    
+  @media (min-width: $mq-md) {
+    flex-direction: row;
+  }
+
+  &__img {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.5em;
+
+    min-height: 15em;
+
+    background-color: $color-white;
+
+    @media (min-width: $mq-md) {
+      flex-basis: 95%;
+      max-width: 95%;
+    }
+  }
+}
 
 
 
