--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -8,7 +8,6 @@
   border-radius:5%;
   border-style:double; 
   border-color: rgb(230,230,230);
-  background:rgb(230, 230, 250);
   overflow: hidden;
   height: 100vh;
   display: grid;
@@ -50,9 +49,9 @@
 }
 
 .lil-nav a {
-  height: 200px;
+  width: 80%;
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 5%;
 }
 
 .lil-nav__img {
